uefi-macros/tests/ui/entry_bad_return_type.stderr
error[E0308]: mismatched types
 --> tests/ui/entry_bad_return_type.rs:8:4
  |
8 | fn main(_handle: Handle, _st: SystemTable<Boot>) -> bool {
  |    ^^^^ expected fn pointer, found fn item
  |
  = note: expected fn pointer `extern "efiapi" fn(uefi::Handle, uefi::table::SystemTable<_>) -> Status`
                found fn item `extern "efiapi" fn(uefi::Handle, uefi::table::SystemTable<_>) -> bool {main}`
  = note: when the arguments and return types match, functions can be coerced to function pointers
